--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,4 +27,4 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
     - name: constructionPpageHtml
-      run: sh make_html.sh FlatBibio/bin/debug/net8.0/FlatBiblio
+      run: sh make_html.sh FlatBibio/bin/debug/net8.0/FlatBiblio.net
