--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,12 +28,7 @@ jobs:
       run: dotnet test --no-build --verbosity normal
     - name: constructionPpageHtml
       run: sh make_html.sh FlatBiblio/bin/Debug/net8.0/FlatBiblio
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./wwwroot/img/index.html
+    - name: Deploy
+      uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: ./wwwroot
